HBASE-28261 Sync jvm11 module flags from hbase-surefire.jdk11.flags to bin/hbase (#5610)
Signed-off-by: Nihal Jain <nihaljain@apache.org>
Signed-off-by: Peter Somogyi <psomogyi@apache.org>
(cherry picked from commit 0916c72929e238735e3dc3ec09dbf935e8d6ad69)